ui/gfx/platform_font_mac.h
@@ -41,6 +41,13 @@ class PlatformFontMac : public PlatformFont {
                   int font_size,
                   int font_style,
                   Font::Weight font_weight);
+
+  PlatformFontMac(NativeFont font,
+                  const std::string& font_name,
+                  int font_size,
+                  int font_style,
+                  Font::Weight font_weight);
+
   ~PlatformFontMac() override;
 
   // Calculates and caches the font metrics and inits |render_params_|.
@@ -54,10 +61,10 @@ class PlatformFontMac : public PlatformFont {
 
   // The name/size/style trio that specify the font. Initialized in the
   // constructors.
-  std::string font_name_;  // Corresponds to -[NSFont fontFamily].
-  int font_size_;
-  int font_style_;
-  Font::Weight font_weight_;
+  const std::string font_name_;  // Corresponds to -[NSFont fontFamily].
+  const int font_size_;
+  const int font_style_;
+  const Font::Weight font_weight_;
 
   // Cached metrics, generated in CalculateMetrics().
   int height_;
